[gd_scene load_steps=33 format=3 uid="uid://dd3nm45u2oioq"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_8jisa"]
[ext_resource type="PackedScene" uid="uid://bhqbxwg7lxtdr" path="res://Scenes/dash.tscn" id="2_fb4lv"]
[ext_resource type="Texture2D" uid="uid://dfdlxt88hixd6" path="res://Assets/Player/SpriteCatFinal.png" id="3_f18hk"]
[ext_resource type="Texture2D" uid="uid://dlo50ux1hc8n2" path="res://Assets/Player/attack and die.png" id="4_rdvkt"]
[ext_resource type="AudioStream" uid="uid://dhekkdvfikrnx" path="res://Sounds/michimuerte.wav" id="5_fq6rd"]
[ext_resource type="AudioStream" uid="uid://c4j2l8bxvfs07" path="res://Sounds/michisonido.wav" id="6_ehulj"]
[ext_resource type="AudioStream" uid="uid://ciqfcxtse572o" path="res://Sounds/gatomamado1.wav" id="7_iiq64"]
[ext_resource type="AudioStream" uid="uid://10wkhmyrw8od" path="res://Sounds/gatomamado2.wav" id="8_ei3s7"]
[ext_resource type="AudioStream" uid="uid://dkgc8lna3ha7i" path="res://Sounds/gatomamado3.wav" id="9_7yial"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ok4fa"]
size = Vector2(17.6, 15.85)

[sub_resource type="Animation" id="Animation_koxmt"]
resource_name = "AttackLeft"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attack(temporal):frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [15, 16, 17, 18]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AreaIzquierda/ColisionIzquierda:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_bafae"]
resource_name = "AttackRight"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attack(temporal):frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [15, 16, 17, 18]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AreaDerecha/ColisionDerecha:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_ilku2"]
resource_name = "DieLeft"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attack(temporal):frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_accy6"]
resource_name = "DieRight"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attack(temporal):frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [15, 16, 17, 18, 19, 19]
}

[sub_resource type="Animation" id="Animation_use8j"]
resource_name = "Down"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WalkSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_j7n06"]
resource_name = "IdleDown"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("IdleSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [19, 23]
}

[sub_resource type="Animation" id="Animation_mxsrn"]
resource_name = "IdleLeft"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("IdleSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_r5fpc"]
resource_name = "IdleRight"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("IdleSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_p64ik"]
resource_name = "IdleUp"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("IdleSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_t3k2c"]
resource_name = "Walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WalkSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WalkSprites:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_fr0xr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WalkSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("IdleSprites:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Attack(temporal):frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AreaIzquierda/ColisionIzquierda:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AreaDerecha/ColisionDerecha:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("WalkSprites:flip_h")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_8lk32"]
resource_name = "Right"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WalkSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [2, 3, 4]
}

[sub_resource type="Animation" id="Animation_o3foa"]
resource_name = "Up"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WalkSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_cg67a"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attack(temporal):frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6dals"]
_data = {
"AttackLeft": SubResource("Animation_koxmt"),
"AttackRight": SubResource("Animation_bafae"),
"DieLeft": SubResource("Animation_ilku2"),
"DieRight": SubResource("Animation_accy6"),
"Down": SubResource("Animation_use8j"),
"IdleDown": SubResource("Animation_j7n06"),
"IdleLeft": SubResource("Animation_mxsrn"),
"IdleRight": SubResource("Animation_r5fpc"),
"IdleUp": SubResource("Animation_p64ik"),
"Left": SubResource("Animation_t3k2c"),
"RESET": SubResource("Animation_fr0xr"),
"Right": SubResource("Animation_8lk32"),
"Up": SubResource("Animation_o3foa"),
"attack": SubResource("Animation_cg67a")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fviy0"]
size = Vector2(13.5656, 22.2375)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6pqd0"]
size = Vector2(10.675, 23.3)

[sub_resource type="Animation" id="Animation_pqoat"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D:zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_66igc"]
resource_name = "zoom"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(10, 0), Vector2(10, 10), Vector2(0, 10)]
}

[sub_resource type="Animation" id="Animation_pc3l7"]
resource_name = "zoom"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1.04, 1.04), Vector2(1.05, 1.05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nm4iw"]
_data = {
"RESET": SubResource("Animation_pqoat"),
"agitar": SubResource("Animation_66igc"),
"zoom": SubResource("Animation_pc3l7")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n2j0g"]
size = Vector2(17.85, 16.2)

[node name="Player" type="CharacterBody2D"]
position = Vector2(119, 46)
scale = Vector2(10, 10)
collision_layer = 3
script = ExtResource("1_8jisa")

[node name="Dash" parent="." instance=ExtResource("2_fb4lv")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.2, -1.3)
shape = SubResource("RectangleShape2D_ok4fa")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6dals")
}

[node name="WalkSprites" type="Sprite2D" parent="."]
visible = false
position = Vector2(2.98023e-08, -0.1)
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_f18hk")
flip_h = true
hframes = 5
vframes = 5
frame = 12

[node name="IdleSprites" type="Sprite2D" parent="."]
visible = false
position = Vector2(-0.0999999, 0.0999997)
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_f18hk")
flip_h = true
hframes = 5
vframes = 5
frame = 11

[node name="Attack(temporal)" type="Sprite2D" parent="."]
position = Vector2(-12.3, -11.6)
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_f18hk")
centered = false
hframes = 5
vframes = 5
frame = 10

[node name="Muerto" type="Sprite2D" parent="."]
visible = false
position = Vector2(2.2, -0.8)
texture = ExtResource("4_rdvkt")
hframes = 5
vframes = 4
frame = 8

[node name="AreaDerecha" type="Area2D" parent="."]
position = Vector2(0, 3.4)

[node name="ColisionDerecha" type="CollisionShape2D" parent="AreaDerecha"]
position = Vector2(16.8, -2.7)
shape = SubResource("RectangleShape2D_fviy0")
disabled = true

[node name="AreaIzquierda" type="Area2D" parent="."]

[node name="ColisionIzquierda" type="CollisionShape2D" parent="AreaIzquierda"]
position = Vector2(-14.8, 1)
shape = SubResource("RectangleShape2D_6pqd0")
disabled = true

[node name="Camera2D" type="Camera2D" parent="."]
rotation = 1.05069
scale = Vector2(-331.085, 312.074)
limit_left = 0
limit_top = 0
limit_bottom = 720
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 3.0
rotation_smoothing_enabled = true
rotation_smoothing_speed = 3.0

[node name="AnimationCamera" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nm4iw")
}

[node name="ColisionBackground" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColisionBackground"]
position = Vector2(0.4, -1.1)
shape = SubResource("RectangleShape2D_n2j0g")

[node name="MichiMuerto" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_fq6rd")

[node name="audioDash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_ehulj")

[node name="M1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_iiq64")

[node name="M2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_ei3s7")

[node name="M3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_7yial")

[connection signal="body_entered" from="AreaDerecha" to="." method="_on_area_derecha_body_entered"]
[connection signal="body_entered" from="AreaIzquierda" to="." method="_on_area_izquierda_body_entered"]
